--- a/src/main/resources/cors.properties
+++ b/src/main/resources/cors.properties
@@ -1,5 +1,5 @@
-cors.localurl=http://localhost:3000
+cors.localurl={$LOCAL_URL}
 
-cors.herokuUrl=https://softservedemo.herokuapp.com/
+cors.herokuUrl={$HEROKU_URL}
 
-backend.url=https://develop-softserve.herokuapp.com/
+backend.url={$BACKEND_URL}
