--- a/src/test/resources/cors.properties
+++ b/src/test/resources/cors.properties
@@ -1,3 +1,3 @@
-cors.localurl = http://localhost:3000
+cors.localurl = {$TEST_LOCAL_URL}
 
-cors.herokuUrl = https://softservedemo.herokuapp.com/
+cors.herokuUrl = {$TEST_HEROKU_URL}
