--- a/src/test/resources/hibernatetest.properties
+++ b/src/test/resources/hibernatetest.properties
@@ -1,9 +1,9 @@
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
 hibernate.connection.driver_class=org.postgresql.Driver
-hibernate.connection.url=jdbc:postgresql://localhost:5432/schedule_test
-hibernate.connection.username=schedule
-hibernate.connection.password=password
+hibernate.connection.url=jdbc:postgresql://{$TEST_DB_HOST}:5432/{$TEST_DB_NAME}
+hibernate.connection.username={$TEST_DB_USERNAME}
+hibernate.connection.password={$TEST_DB_PASSWORD}
 
 #add this to DBConfigTest in getSessionFactory
 #properties.put("hibernate.connection.url", environment.getProperty(URL));
