Move port to .env, add config_replacer.sh

--- a/src/main/resources/cors.properties
+++ b/src/main/resources/cors.properties
@@ -1,5 +1,5 @@
-cors.localurl={$LOCAL_URL}
+cors.localurl=${LOCAL_URL}
 
-cors.herokuUrl={$HEROKU_URL}
+cors.herokuUrl=${HEROKU_URL}
 
-backend.url={$BACKEND_URL}
+backend.url=${BACKEND_URL}
