--- a/src/main/resources/mongo.properties
+++ b/src/main/resources/mongo.properties
@@ -1,2 +1,2 @@
-mongo.local.current.database={$MONGO_DATABASE}
-default.server.cluster={$MONGO_SERVER}
+mongo.local.current.database=${MONGO_DATABASE}
+default.server.cluster=${MONGO_SERVER}
