--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -3,9 +3,9 @@ hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.connection.driver_class=org.postgresql.Driver
 
 
-hibernate.connection.url=jdbc:postgresql://{$DB_HOST}:5432/{$DB_NAME}
-hibernate.connection.username={$DB_USERNAME}
-hibernate.connection.password={$DB_PASSWORD}
+hibernate.connection.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+hibernate.connection.username=${DB_USERNAME}
+hibernate.connection.password=${DB_PASSWORD}
 
 
 hibernate.show_sql=true
