--- a/src/test/resources/mail.properties
+++ b/src/test/resources/mail.properties
@@ -1,6 +1,6 @@
 spring.mail.host=smtp.gmail.com
-spring.mail.username={$TEST_MAIL_USERNAME}
-spring.mail.password={$TEST_MAIL_PASSWORD}
+spring.mail.username=${TEST_MAIL_USERNAME}
+spring.mail.password=${TEST_MAIL_PASSWORD}
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
