--- a/playbooks/postgres_create.yml
+++ b/playbooks/postgres_create.yml
@@ -1,15 +1,7 @@
 - name: Create GCP Instance and PostgreSQL Database
-  hosts: localhost
+  hosts: "{{ DB_HOST }}"
   gather_facts: False
   tasks:
-  #  - name: Create GCP Instance
-  #    gcp_compute_instance:
-  #      name: postgres-instance
-   #     machine_type: projects/schedule-405513/zones/europe-north1-a/machineTypes/n1-standard-1
-    #    disk_size_gb: 10
-    #    image: projects/debian-cloud/global/images/debian-9-stretch-v20210902
-     #   state: present
-    #  delegate_to: localhost
 
     - name: Install PostgreSQL
       become: yes
