--- a/playbooks/postgres_create.yml
+++ b/playbooks/postgres_create.yml
@@ -1,5 +1,5 @@
 - name: Create GCP Instance and PostgreSQL Database
-  hosts: postgres-vms
+  hosts: group-postgres
   gather_facts: False
   tasks:
 
