--- a/playbooks/new-postgres.yml
+++ b/playbooks/new-postgres.yml
@@ -34,7 +34,7 @@
     - name: Create the database specified in vars
       become: true
       become_user: postgres
-      postgresql_db:
+      community.general.postgresql_db:
         name: "{{ DB_NAME }}"
         template: 'template0'
         state: present
@@ -42,7 +42,7 @@
     - name: Ensure user has access to the new database
       become: true
       become_user: postgres
-      postgresql_user:
+      community.general.postgresql_user:
         db: "{{ DB_NAME }}"
         name: "{{ POSTGRES_USER }}"
         password: "{{ POSTGRES_PASSWORD }}"
@@ -52,7 +52,7 @@
     - name: Ensure user does not have unnecessary permissions
       become: true
       become_user: postgres
-      postgresql_user:
+      community.general.postgresql_user:
         name: "{{ POSTGRES_USER }}"
         role_attr_flags: NOSUPERUSER,NOCREATEDB
         state: present
