--- a/playbooks/collections/requirements.yml
+++ b/playbooks/collections/requirements.yml
@@ -1,3 +1,6 @@
 ---
 collections:
 - name: community.general  
+- name: community.mysql- name
+- name: community.postgresql
+- name: community.seboolean
