--- a/playbooks/new-postgres.yml
+++ b/playbooks/new-postgres.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create GCP Instance and PostgreSQL Database
-  hosts: 34.136.192.212
+  hosts: group-postgres
   gather_facts: false
   tasks:
     - name: Install dependencies for PostgreSQL
