--- a/playbooks/new-postgres.yml
+++ b/playbooks/new-postgres.yml
@@ -30,9 +30,6 @@
         name: postgresql
         state: started
         enabled: yes
-    
-    - name: Add some dummy data to our database
-      shell: pwd
 
     - name: Create the database specified in vars
       command: >
@@ -54,3 +51,5 @@
         sudo -u postgres psql -c "ALTER USER {{ db_user }} WITH NOSUPERUSER NOCREATEDB;"
       become: true
 
+    - name: Add some dummy data to our database
+      shell: psql -h localhost -U {{ db_user }} -d {{ db_name }} < ./scripts/init.sql
