--- a/playbooks/new-postgres.yml
+++ b/playbooks/new-postgres.yml
@@ -61,14 +61,11 @@
       copy:
         src: "scripts/init.sql"
         dest: "/home/bobrja"
-        
-#    - name: Add some dummy data to our database
-#      shell: psql -h localhost -U {{ db_user }} -d {{ db_name }} < ./init.sql
 
-    - name: "Restore the database"
-      community.general.postgresql_db:
-        state: restore
-        name: "{{ db_name }}"
-        target: "/home/bobrja/init.sql"
-      become: yes
-      become_user: postgres
+    - name: add pasword
+      command: >
+        sudo echo "127.0.0.1:*:*:{{ db_user }}:{{ db_password }}" >> .pgpass && chmod 600 .pgpass
+      become: true
+        
+   - name: Add some dummy data to our database
+     shell: psql -h 127.0.0.1 -U {{ db_user }} -d {{ db_name }} < ./init.sql
