--- a/playbooks/new-postgres.yml
+++ b/playbooks/new-postgres.yml
@@ -65,6 +65,7 @@
       command: >
         sudo echo "127.0.0.1:*:*:{{ db_user }}:{{ db_password }}" > .pgpass
       become: true
+      mode: "0666"
         
     - name: Add some dummy data to our database
-      shell: psql -h 127.0.0.1 -U {{ db_user }} -d {{ db_name }} < ./init.sql
+      shell: psql -h 127.0.0.1 -U {{ db_user }} -d {{ db_name }} < init.sql
