--- a/playbooks/create-postgres.yml
+++ b/playbooks/create-postgres.yml
@@ -1,6 +1,7 @@
 ---
 - name: Create GCP Instance and PostgreSQL Database
   hosts: "{{ host_db }}"
+  collection: community.general
   gather_facts: false
   tasks:
     - name: Install dependencies for PostgreSQL
